--- a/sbin/bioctl/bioctl.8
+++ b/sbin/bioctl/bioctl.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: bioctl.8,v 1.111 2023/07/06 21:08:50 kn Exp $
+.\"	$OpenBSD: bioctl.8,v 1.112 2023/08/18 14:09:19 kn Exp $
 .\"
 .\" Copyright (c) 2004, 2005 Marco Peereboom
 .\"
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: July 6 2023 $
+.Dd $Mdocdate: August 18 2023 $
 .Dt BIOCTL 8
 .Os
 .Sh NAME
@@ -288,7 +288,7 @@ is specified as "auto", the number of rounds will be automatically determined
 based on system performance.
 Otherwise the minimum is 4 rounds and the default is 16.
 .It Fl s
-Read the passphrase for the selected crypto volume from
+Omit prompts and read passphrases without confirmation from
 .Pa /dev/stdin
 rather than
 .Pa /dev/tty .
