--- a/sbin/bioctl/bioctl.8
+++ b/sbin/bioctl/bioctl.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: bioctl.8,v 1.112 2023/08/18 14:09:19 kn Exp $
+.\"	$OpenBSD: bioctl.8,v 1.113 2023/08/21 08:33:11 kn Exp $
 .\"
 .\" Copyright (c) 2004, 2005 Marco Peereboom
 .\"
@@ -23,7 +23,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: August 18 2023 $
+.Dd $Mdocdate: August 21 2023 $
 .Dt BIOCTL 8
 .Os
 .Sh NAME
@@ -288,10 +288,11 @@ is specified as "auto", the number of rounds will be automatically determined
 based on system performance.
 Otherwise the minimum is 4 rounds and the default is 16.
 .It Fl s
-Omit prompts and read passphrases without confirmation from
+Read passphrases from
 .Pa /dev/stdin
 rather than
-.Pa /dev/tty .
+.Pa /dev/tty ,
+without prompts, confirmation or retry on mismatch.
 .El
 .Sh EXAMPLES
 Configure a new
