--- a/lib/libcrypto/man/BIO_f_base64.3
+++ b/lib/libcrypto/man/BIO_f_base64.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: BIO_f_base64.3,v 1.14 2023/09/10 11:20:52 schwarze Exp $
+.\"	$OpenBSD: BIO_f_base64.3,v 1.15 2023/09/11 04:00:40 jsg Exp $
 .\"	OpenSSL fc1d88f0 Wed Jul 2 22:42:40 2014 -0400
 .\"
 .\" This file was written by Dr. Stephen Henson <steve@openssl.org>.
@@ -49,14 +49,14 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED
 .\" OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: September 10 2023 $
+.Dd $Mdocdate: September 11 2023 $
 .Dt BIO_F_BASE64 3
 .Os
 .Sh NAME
 .Nm BIO_f_base64
 .\" .Nm EVP_ENCODE_LENGTH and
 .\" .Nm EVP_DECODE_LENGTH are intentionally undocumented
-.\" because they are internal implemention details of BIO_f_base64(3)
+.\" because they are internal implementation details of BIO_f_base64(3)
 .\" and practically unused outside evp/bio_b64.c.
 .Nd base64 BIO filter
 .Sh SYNOPSIS
